--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "after-event-community-bot",
   "version": "1.0.0",
   "description": "The main bot for the Hackweek After-Event-Community server.",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
